--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dagre": "^0.7.4",
-    "echarts": "^3.1.10",
-    "graphlib": "1.0.x",
-    "lodash": "3.10.x",
-    "zrender": "3.1.x"
+    "dagre": "^0.8.5",
+    "echarts": "^4.6.0",
+    "graphlib": "^2.1.8",
+    "lodash": "4.17.15",
+    "zrender": "^4.2.0"
   },
   "repository": {
     "type": "git",
