--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "ECharts graph layout extension integrated with dagre.js",
   "main": "index.js",
   "scripts": {
-    "prepublish": "node build/amd2common.js"
+    "build": "run-s clean build:cmd",
+    "build:cmd": "node build/amd2common.js",
+    "clean": "rimraf lib",
+    "clean:all": "rimraf node_modules lib package-lock.json yarn.lock"
   },
-  "author": "",
-  "license": "ISC",
+  "contributors": [
+    "David López <david.lfelguera@nicepeopleatwork.com>"
+  ],
   "dependencies": {
     "dagre": "^0.8.5",
     "echarts": "^4.6.0",
@@ -17,11 +21,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ecomfe/echarts-dagre.git"
+    "url": "https://github.com/telco2011/echarts-dagre"
   },
   "devDependencies": {
-    "esprima": "^2.7.2",
-    "fs-extra": "^0.30.0",
-    "glob": "^7.0.3"
+    "esprima": "^4.0.1",
+    "fs-extra": "^8.1.0",
+    "glob": "^7.1.6",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.1"
   }
 }
